Front-end fixes!
Change-Id: Ia9bc618df11fe762c025c7efc1e0df4ec7cff28b

--- a/com.personal.book.library/src/main/webapp/main.html
+++ b/com.personal.book.library/src/main/webapp/main.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Mızrak Otomotiv Kredi Ön Başvuru</title>
+<title>Bireysel Kütüphane</title>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/breadcrumb.css">
 <link rel="stylesheet" type="text/css" href="css/angular-datepicker.min.css">
