--- a/com.personal.book.library/src/main/webapp/login.html
+++ b/com.personal.book.library/src/main/webapp/login.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css"
 	href="css/angular-datepicker.min.css">
 </head>
-<body ng-app="CreditApplication">
+<body ng-app="AuthenticationApplication">
 
 	<div class="container" ng-controller="AuthenticationCtrl">
 
