--- a/com.personal.book.library/src/main/webapp/main.html
+++ b/com.personal.book.library/src/main/webapp/main.html
@@ -155,6 +155,24 @@
 			</div>
 		</div>
 
+
+		<div class="row">
+			<div class="col-md-1"></div>
+			<div class="col-md-11">
+				<hr>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="col-md-8"></div>
+				<div class="col-md-4">
+					<p class="muted pull-right">2018 Batuhan Düzgün</p>
+				</div>
+			</div>
+		</div>
+
+
 		<div id="successMessageModal" class="modal fade" role="dialog">
 			<div class="modal-dialog">
 
